First plot (prelim!!!)

--- a/slides.qmd
+++ b/slides.qmd
@@ -6,6 +6,8 @@ editor: visual
 
 
 library(tidyverse)
+library(haven)
+library(RColorBrewer)
 
 
 ## Volunteering
@@ -14,7 +16,14 @@ library(tidyverse)
 
 ``` {r}
 
+dif <- as.data.frame(read.csv("OXF.csv", sep = ";"))
+survey <- data.frame(job=as.factor(dif$V29), volunteer=as.factor(dif$V34))
 
+  
+ggplot(survey, aes(x=volunteer)) +
+  geom_bar(aes(fill=job)) +
+   scale_fill_brewer(palette="Pastel1")
+  
 
 ```
 
