--- a/slides.qmd
+++ b/slides.qmd
@@ -4,7 +4,7 @@ format: revealjs
 editor: source
 ---
 
-``` {r, warning=FALSE}
+```{r, warning=FALSE, error=FALSE, include=FALSE}
 
 library(tidyverse)
 library(dplyr)
@@ -13,90 +13,90 @@ library(RColorBrewer)
 
 ```
 
-``` {r, warning=FALSE}
+```{r, warning=FALSE, error=FALSE, include=FALSE}
 
 dif <- as.data.frame(read.csv("OXF.csv", sep = ";"))
-dif %>% filter(dif$V34new > 0) -> dif
-dif %>% filter(dif$V34new <= 7) -> dif
-
+dif %>% filter(dif$V34new > 0)
+dif %>% filter(dif$V34new <= 7)
+dif <- na.omit(dif)
 
 survey <- data.frame(job=as.factor(dif$V29), volunteer=as.factor(dif$V34new))
-survey2 <- survey %>% 
-  group_by(volunteer, job) %>% 
-  summarise(count = n()) %>% 
-  mutate(perc = count/sum(count))
 
 ```
 
-# Volunteering in the times of war: what data can tell us
+---
 
-# How many people in Ukraine become volunteers since 24.02
+## Volunteering in the times of war: what data can tell us
 
-``` {r, warning=FALSE}
+------------------------------------------------------------------------
 
-ggplot(survey2, aes(volunteer)) + 
-  geom_bar(aes(y = (..count..)/sum(..count..)), fill = "#FDDB52") + 
+### How many people in Ukraine become volunteers since 24.02
+
+- Since February 24, more than 60% of people in Central and Western regions of Ukraine became volunteers.
+
+- They helped either physically or financially or both.
+
+- Around 15% of people said they **would** help. Only 25% of people said they had not helped and would not do so.
+
+------------------------------------------------------------------------
+
+### How many people in Ukraine become volunteers since 24.02
+
+```{r, warning=FALSE}
+
+ggplot(survey, aes(volunteer)) + 
+  geom_bar(aes(y = (..count..)/sum(..count..)), fill = "#dea5a4", width = 0.6) + 
   scale_y_continuous(labels=scales::percent) +
-  ylab("% of all respondents")
-
-```
- TEXT around 70% became volunteers
-
-
-# How many volunteers lost their jobs
-
-``` {r, warning=FALSE}
-
-ggplot(survey2, aes(x=volunteer, y = perc*100)) +
-  geom_bar(aes(fill=job), stat="identity", width = 0.7) +
-  labs(x = "Volunteering", y = "% of volunteers", fill = "Financial situation") +
-  scale_fill_brewer(palette="Pastel1")
+  labs(title = "Are you involved in any kind of volunteering activities to help army/TDF/IDP?", y = "% of all respondents", caption = "Survey by Democratic Intiatives Foundation, May 7-15, Central and Western regions of Ukraine, N = 1000") +
+  theme(axis.title.x = element_blank()) +
+  theme(plot.caption = element_text(hjust = 1, size = 7)) +
+  scale_x_discrete(labels = c("Yes", 
+                              "No, but I intend to",
+                              "No, and I don't intend to"))
 
 ```
 
-Among volunteers, x% lost their jobs
+---
+### How many volunteers lost their jobs
 
-# How many volunteers came back to work beacuse they were out of money
+- Around a half of those who volunteered did not lose their jobs. 
 
-No info
+- Up to 10% of volunteers said they lost their jobs. 
 
-# How many NGO were created
+- Another 10% of them did not lose their jobs because they did not have ones.
+---
 
-Prior to the Russian invasion of Ukraine there [were](https://www.humanitarianoutcomes.org/sites/default/files/publications/ukraine_review_2022.pdf) about **150 active national NGOs** involved in humanitarian aid. 
+### How many volunteers lost their jobs
 
-Three months after February 24, approximately **2400 new groups** [were registered](https://business.diia.gov.ua/cases/novini/ukrainskij-biznes-v-umovah-vijni-analitika-stanu-za-3-misaci) as "charitable foundations or public organisations".
+```{r, warning=FALSE}
 
-### How much money were donated by people of different countries to Ukraine 
-
-Since February 24, 992 grants worth $1,228,860,746 [were donated](https://topics.candid.org/issue-pages/ukraine/#tab-nav) to Ukraine. 
-
-# Data on Ukraine
-
-# Google search Ukraine
-
-``` {r, warning=FALSE}
-
-gig <- as.data.frame(read.csv("google.csv", sep = ";"))
-google <- data.frame(Search_Ukraine=as.numeric(as.character(gig$Search_Ukraine)), Week=as.Date(gig$Week))
-
-ggplot(google, aes(Week, Search_Ukraine)) +
-  geom_area(fill="#dea5a4")
+ggplot(survey, aes(volunteer, fill = job)) + 
+  geom_bar(aes(y = (..count..)/sum(..count..)), width = 0.6) + 
+  scale_y_continuous(labels=scales::percent) +
+  labs(title = "Are you involved in any kind of volunteering activities to help army/TDF/IDP?", y = "% of all respondents", caption = "Survey by Democratic Intiatives Foundation, May 7-15, Central and Western regions of Ukraine, N = 1000") +
+  theme(axis.title.x = element_blank()) +
+  theme(plot.caption = element_text(hjust = 1, size = 7)) +
+  guides(fill=guide_legend(title="Have you lost your job\nsince the invasion?")) +
+  scale_fill_manual(labels=c("Yes", "Yes, but found a new one", "No, I didn't have a job to lose", "No, but I don't receive a salary", "No", "Hard to say"), values=c("#F65454", "#F68D54", "#F6B954", "#F6EC54", "#5499F6", "#7E8185")) +
+  scale_x_discrete(labels = c("Yes", "No, but I intend to", "No, and I don't intend to"))
 
 ```
 
-# Donations to Ukraine in usd
+---
+### How many volunteers came back to work beacuse they were out of money
 
+- NO INFO found
 
+---
 
+### How many NGO were created
 
-# Humanitarian help in tonnes
+- Prior to the Russian invasion of Ukraine there [were](https://www.humanitarianoutcomes.org/sites/default/files/publications/ukraine_review_2022.pdf) about **150 active national NGOs** involved in humanitarian aid.
 
+- Three months after February 24, approximately **2400 new groups** [were registered](https://business.diia.gov.ua/cases/novini/ukrainskij-biznes-v-umovah-vijni-analitika-stanu-za-3-misaci) as "charitable foundations or public organisations".
 
+---
 
-# Military support in vehicles
+### How much money were donated by people of different countries to Ukraine
 
-
-
-# Investments in Ukraine (USD)
-
-
+- Since February 24, 992 grants worth \$1,228,860,746 [were donated](https://topics.candid.org/issue-pages/ukraine/#tab-nav) to Ukraine.
